[tool.poetry]
name = "fastapi-starter"
version = "0.0.0"
description = "A FastAPI starter repository."
authors = [
    "xanode <xanode@minet.net>",
    "Samuel Guillemet <samuel.guillemet@telecom-sudparis.eu>",
]
readme = "README.md"
packages = [{ include = "app" }]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.110.1" }
pydantic-settings = "^2.2.1"
zxcvbn = "^4.4.28"
sqlalchemy = "^2.0.29"
pyhumps = "^3.8.0"
python-jose = "^3.3.0"
alembic = "^1.13.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
requests = "^2.31.0"
types-requests = "^2.31.0.20240406"
asyncpg = "^0.29.0"
alembic-autogenerate-enums = "^0.1.2"
tenacity = "^8.2.2"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
mypy = "^1.10.0"
mypy-extensions = "^1.0.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"
pytest-xdist = "^3.6.1"
ruff = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict_optional = false
ignore_missing_imports = true

[tool.ruff]
builtins = ["_"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RET", # retype
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]


[tool.pytest.ini_options]
norecursedirs = [
    ".venv",
    ".git",
    "__pycache__",
    "__init__.py",
    ".mypy_cache",
    ".pytest_cache",
]
addopts = ["--cov=app", "--cov-report=term-missing", "--cov-report=xml"]
env = ["ENVIRONMENT=test"]
log_cli = false
log_cli_level = "INFO"
filterwarnings = "ignore::DeprecationWarning"


[tool.coverage.run]
omit = [
    "app/plugins/*",
    "app/commands/*",
    "app/db/base_class.py",
    "app/db/base.py",
]
concurrency = ["greenlet", "thread"]
